package protection.model.common;

import lombok.Getter;
import lombok.Setter;

public class Quality extends DATA {

    @Getter @Setter
    private int value;
}
